--- a/prompts/prompts_config.yaml
+++ b/prompts/prompts_config.yaml
@@ -49,85 +49,85 @@ intent_analysis:
 
 outline_generation:
   user_prompt_template: |
-    你是一个专业的医学综述写作专家，擅长构建结构化的文献综述大纲。
+    # 任务：构建医学文献综述写作大纲
 
-    请基于以下研究主题和文献摘要，生成一个全面的医学综述大纲：
+    ## 1. 角色与目标
+    你将扮演一位资深的**医学文献结构化提炼与规划师**，专注于从多篇文献摘要中提炼核心信息并构建逻辑严谨的综述框架。
 
-    **研究主题**: {topic}
+    你的核心目标是：基于用户提供的主题 `{topic}` 和多篇文献摘要 `{literature_summary}`，生成一份结构完整、逻辑连贯、内容驱动的中文综述写作大纲，并为大纲的每个部分规划建议的近似字数。
 
-    **相关文献摘要**:
-    {literature_summary}
+    ## 2. 背景与上下文
+    - **核心主题 `{topic}`**: 这是整个综述的中心思想和贯穿始终的主线。所有大纲的设计都应围绕此主题展开。
+    - **内容来源 `{literature_summary}`**: 这是你构建大纲主体部分的唯一信息来源。你需要深度分析这些摘要，识别其中的核心议题、研究发现和内在逻辑关联。
 
-    请生成一个结构化的综述大纲，包含以下要素：
+    ## 3. 关键步骤
+    在你的创作过程中，请遵循以下内部步骤来构思和打磨作品：
+    1.  **主题聚焦与内容吸收**: 首先，明确综述的核心主题 `{topic}`。然后，逐一深度阅读并理解所有提供的 `{literature_summary}`，提取关键信息，如研究背景、方法、主要发现、结论和局限性。
+    2.  **核心议题聚类与提炼**: 将从摘要中提取的关键信息进行归纳和分类，形成3-5个逻辑上独立且相互关联的核心议题（Themes）。为每个议题构思一个精确、简洁的标题，这些标题将直接构成综述的**核心主体部分**。
+    3.  **大纲结构化与排序**: 构建一个包含“引言”、“核心主体部分”和“结论与展望”的完整大纲框架。将上一步提炼出的核心议题标题，按照逻辑顺序（如：从基础到应用、从问题到解决方案、按时间发展等）填入“核心主体部分”。
+    4.  **内容权重与字数规划**: 评估每个部分在综述中的重要性及内容支撑度。
+        - 为“引言”和“结论与展望”分配标准的字数建议。
+        - 根据每个核心主体议题在所提供摘要中的信息密度和重要性，为其分配合理的建议字数。信息丰富、重要的部分应获得更多的字数配额。
+    5.  **最终审查与格式化**: 检查整个大纲的逻辑是否通顺，标题是否精炼，字数分配是否合理。确保最终输出严格符合下方“输出要求”中定义的格式。
 
-    ## 综述大纲
-
-    **标题**: [建议的综述标题]
-
-    **预计字数**: [建议的总字数范围]
-
-    **目标读者**: [如：临床医生、研究人员、学生等]
-
-    ## 详细大纲
-
-    ### 一、引言 (Introduction)
-    - [背景介绍要点1]
-    - [背景介绍要点2]
-    - [研究意义和目的]
-    - [本文结构概述]
-
-    ### 二、[主要章节1]
-    - [子章节1.1]
-    - [子章节1.2]
-    - [子章节1.3]
-
-    ### 三、[主要章节2]
-    - [子章节2.1]
-    - [子章节2.2]
-    - [子章节2.3]
-
-    ### 四、[主要章节3]
-    - [子章节3.1]
-    - [子章节3.2]
-    - [子章节3.3]
-
-    ### 五、[根据需要添加更多章节]
-
-    ### 六、结论与展望 (Conclusion and Outlook)
-    - [主要发现总结]
-    - [研究局限性]
-    - [未来研究方向]
-
-    ## 参考文献
-    - [预计引用的文献数量和类型]
-
-    ## 特殊说明
-    - [任何特殊的写作要求或注意事项]
-
+    ## 4. 输出要求
+    - **格式**: 使用Markdown的层级列表格式。
+    - **风格**: 专业、学术、简洁。
+    - **约束**:
+        - 大纲必须包含标准的“引言”和“结论与展望”（或意义相近的标题，如“总结”）。
+        - 核心主体部分的标题必须完全基于对 `{literature_summary}` 内容的分析和提炼。
+        - 每个部分的标题后必须紧跟括号，注明建议字数，格式为 `(建议约 XXX 字)`。
+        - **最终输出**: 你的最终回复应**严格且仅包含**最终生成的大纲本身。绝对禁止包含任何引导语、解释、分析过程、总结或其他任何非大纲内容。直接从“引言”开始输出。
 review_generation:
   user_prompt_template: |
-    你是一位资深的医学综述撰写专家。请根据以下信息撰写一篇完整、连贯的医学综述文章。
+    # 任务：撰写一篇专业的中文医学综述文章
 
     **文章标题**: {title}
 
-    **综述大纲**:
-    {outline_content}
+    # 角色：医学综述报告撰写专家
 
-    **参考文献库**:
-    {literature_info}
+    # 任务
+    请以提供的 **综述写作大纲** ('{outline_content}') 作为高级结构指导，并 **充分利用** 提供的 **多篇医学文献摘要** ('{literature_info}') 中的信息，撰写一篇逻辑严谨、结构清晰、内容完整的 **中文医学领域综述文章**。
 
-    **撰写要求**:
-    1. 严格按照提供的大纲结构撰写，保持层次分明
-    2. 内容必须基于提供的文献信息，不得编造事实
-    3. 使用专业的医学术语和学术语言
-    4. 正文每个自然段落开头使用两个全角空格（　　）缩进
-    5. 在引用文献时使用中括号数字标注，如[1]、[2]等，对应上述文献编号
-    6. 各章节之间保持逻辑连贯，形成完整的论述体系
-    7. 段落内语言流畅自然，避免生硬的拼接感
-    8. 结论部分要总结全文，提出展望
-    9. 输出完整的Markdown格式文章，包含标题层级
+    # 撰写要求
+    1. **遵循大纲结构与处理标题:**
+     * 文章的**主要章节结构**必须与给定的大纲标题顺序一致。
+     * 在生成 Markdown 文章的章节标题时，请**使用**大纲中提供的标题文本，但**必须省略**括号及其内部的字数建议（即，忽略 `"(建议约 XXX 字)"` 这部分）。
+     * 为这些主要的章节标题**添加顺序编号**。通常从"引言"开始编号为"1."，后续核心主体章节依次编号"2."、"3."... 直到最后的"结论与展望"部分。请使用 Markdown 的二级标题格式（`##`）来展示这些带编号的章节标题。例如：`## 1. 引言`，`## 2. [核心主体标题A]`，`## 3. [核心主体标题B]`， ... ，`## N. 结论与展望`。（注意：文章的总标题通常使用一级标题 `#` 且不带编号）。
 
-    请直接输出完整的综述文章：
+    2. **参考字数规划 (内部使用):** 在撰写每个部分时，请**内部参考**大纲中提供的**建议字数**来把握内容的详略，但**不要**在最终输出的任何地方（包括标题或正文）提及这些字数。内容的逻辑完整性和表达清晰度是首要标准。
+
+    3. **内容基于摘要:** 所有论点、分析和结论都应基于提供的文献摘要内容，进行整合、比较和分析。
+
+    4. **标准综述格式:** 按照标准的医学综述文章格式进行撰写。
+
+    5. **段落格式要求:**
+     * **段落完整连续:** 每个自然段内部不需要额外分点列项，需写成连续、完整的段落文字。
+     * **段首缩进:** 综述正文中的**每一个自然段**（不包括标题、列表项、代码块等）的开头，请**务必**添加**两个全角空格**（`　　`）以实现段首缩进。
+
+    6. **文献引用要求:**
+     * 在正文中引用相关文献摘要内容时，必须在相应位置通过**中括号数字**明确标注参考文献的序号，例如：`[1]`, `[2]`, `[3]`等。
+     * 请**按照文献在摘要中出现的顺序**为引用分配序号（第1篇文献用`[1]`，第2篇用`[2]`，依此类推）。
+     * **重要：不要在文章末尾添加参考文献列表**，参考文献列表将由系统自动处理和添加。
+
+    7. **语言与逻辑:** 确保文章语言流畅、专业、准确，逻辑关系清晰，论证有力。
+
+    8. **增强自然连贯性与逻辑流畅:**
+     * **概念递进:** 通过相关概念的自然递进和展开来连接句子，而非依赖明显的连接词。
+     * **语义关联:** 利用相关词汇、同义复述和概念关联来维持文本连贯性，使语义流动更为自然。
+     * **上下文衔接:** 确保每个新句子明确地从前一句子的信息或概念中延伸发展。
+     * **结构变化:** 混合使用不同句式结构（长短句搭配、主动被动转换）以创造节奏变化，避免机械单调感。
+     * **论点链接:** 在阐述相关观点时，通过内容本身的关联性建立连接，而非依赖公式化的过渡标记。
+     * **隐性过渡:** 使用隐含的逻辑关系和情境引导来替代显性的过渡词，让文本流动更自然。
+     * **思路连贯展开:** 确保文章整体遵循清晰但不机械的思路发展脉络，让读者能够跟随自然的思维进程。
+     * **避免套路化过渡:** 句子之间和段落之间要自然过渡，但减少使用过于明显的过渡词（如`"此外"`、`"然而"`等），转而采用更自然、多样化的语句连接方式。
+
+    # **输出要求 (极其重要)**
+    1. **最终结果必须保存为 Markdown (.md) 格式**。
+    2. **你的输出必须严格地、仅仅包含完整的 Markdown 格式综述文章本身。**
+    3. **绝对禁止**在 Markdown 文章内容之前或之后添加任何形式的引导语、解释、说明、确认信息、代码块标记说明（如 `"` ```markdown `"` 这种文字本身）或任何其他非文章正文的内容。
+    4. 你的输出应该直接以文章的第一个字符（通常是总标题的 `#` 或第一个字）开始，并以文章的最后一个字符结束。
+    5. **重要：文章结尾不要包含参考文献部分**，参考文献将由系统自动添加。
 
 literature_filter:
   comprehensive: 请全面筛选文献，保留所有相关的研究，包括综述和原始研究
