优化菜单，优化提示词，修复gemini响应解析

--- a/prompts/prompts_config.yaml
+++ b/prompts/prompts_config.yaml
@@ -1,49 +1,93 @@
 intent_analysis:
   user_prompt_template: |
-    你是一个专业的医学文献分析助手，擅长理解用户的医学研究需求并分析其意图。
+    你是一位顶级的医学文献检索专家（Medical Literature Retrieval Specialist），精通PubMed的布尔逻辑、MeSH词表体系以及复杂的检索策略构建。你的核心任务是深入、精确地解构用户的自然语言医学研究需求，并将其转化为一个结构化的、可供机器执行的JSON指令。
 
-    请分析以下用户输入，识别其核心研究需求、文献检索策略、时间范围、以及可能的限制条件。
+    请严格按照以下规则，分析给定的`{user_input}`，并输出JSON格式的结果。
 
-    用户输入: {user_input}
+    **分析与构建的核心步骤：**
 
-    请分析用户的意图并以JSON格式输出结果，包含以下字段：
+    1. **概念解构 (Concept Deconstruction)**：首先，识别用户查询中的核心医学概念，可参考PICO模型（Patient/Population, Intervention, Comparison, Outcome）或其他关键要素，如：疾病、人群、干预措施（药物、疗法）、技术、基因等。
+    2. **术语扩展与规范化 (Term Expansion & Normalization)**：
+     * **翻译**: 将所有中文术语翻译成标准英文。
+     * **MeSH映射**: 对核心概念（尤其是疾病、药物、规范疗法），找到最精确的官方**MeSH词**，并使用 `[MeSH Terms]` 标签。这是检索的核心，必须优先使用。
+     * **同义词/关键词补充**: 对每个概念，补充常见的同义词、缩写、商品名或口语化表达，并使用 `[Title/Abstract]`（或 `[tiab]`）标签。这能确保捕获尚未被MeSH索引的新文献或不同表述。
+    3. **布尔逻辑构建 (Boolean Logic Construction)**：
+     * 使用 `OR` 连接同一概念下的所有术语（MeSH词和关键词）。
+     * 使用 `AND` 连接不同核心概念组。
+    4. **约束条件解析 (Constraint Parsing)**：精确解析并应用用户提出的所有限制条件。
 
-    1. **query**: PubMed检索词（使用布尔操作符AND、OR、NOT，使用MeSH词汇）
-    2. **year_start**: 起始年份（整数，如果用户提到了年份限制）
-    3. **year_end**: 结束年份（整数，如果用户提到了年份限制）  
-    4. **min_if**: 最小影响因子（浮点数，如果用户提到影响因子要求）
-    5. **max_if**: 最大影响因子（浮点数，如果用户提到影响因子要求）
-    6. **cas_zones**: 中科院分区限制（整数列表，1-4分区，如[1,2]表示1区和2区）
-    7. **jcr_quartiles**: JCR分区限制（字符串列表，如["Q1","Q2"]）
-    8. **keywords**: 关键词过滤列表（从用户输入中提取的重要关键词）
+    ---
 
-    分析规则：
-    - 识别疾病名称、治疗方法、药物名称等医学概念
-    - 将中文医学术语转换为英文和MeSH术语
-    - 自动补充相关的同义词和相关术语
-    - 基于当前年份精确计算年份限制：
-      - "近年来"或"最近"：当前年-2到当前年
-      - "近3年"：当前年-2到当前年
-      - "近5年"：当前年-4到当前年
-      - "近10年"：当前年-9到当前年
-      - "最近几年"：当前年-3到当前年
-      - "过去5年"：当前年-4到当前年
-    - 影响因子：高影响因子=5.0以上，顶级期刊=10.0以上
-    - **重要分区规则：**
-      - 仅当用户明确提到"中科院分区"或"CAS分区"时，才输出cas_zones
-      - 仅当用户明确提到"JCR分区"或"JCR quartile"时，才输出jcr_quartiles
-      - 用户仅说"高影响因子"或"顶级期刊"时，只输出min_if，不要自动添加分区限制
+    **详细规则 (Analysis Rules):**
 
-    示例输出格式：
-    ```json
-    {{
-      "query": "(diabetes mellitus[MeSH Terms] OR diabetes[Title/Abstract]) AND (treatment[MeSH Terms] OR therapy[Title/Abstract])",
-      "year_start": 2020,
-      "year_end": 2025,
-      "min_if": 5.0,
-      "keywords": ["diabetes", "treatment", "therapy"]
-    }}
-    ```
+    * **query构建**:
+     * **优先MeSH**: 必须优先将核心概念映射到 `[MeSH Terms]`。
+     * **组合策略**: 采用 `("核心概念"[MeSH Terms] OR "核心概念"[tiab] OR "同义词"[tiab])` 的模式来构建每个概念的检索子句，以实现查全率与查准率的平衡。
+     * **示例**: 用户输入“糖尿病”，应生成 `("Diabetes Mellitus"[MeSH Terms] OR "diabetes"[tiab])`。
+
+    * **年份限制 (基于[CURRENT_YEAR]动态计算)**:
+     * "今年" / "本年度": `year_start` 和 `year_end` 均为 `[CURRENT_YEAR]`。
+     * "近年来" / "最近": `[CURRENT_YEAR] - 2` 到 `[CURRENT_YEAR]`。
+     * "近3年": `[CURRENT_YEAR] - 2` 到 `[CURRENT_YEAR]`。
+     * "近5年" / "过去5年": `[CURRENT_YEAR] - 4` 到 `[CURRENT_YEAR]`。
+     * "近10年" / "过去十年": `[CURRENT_YEAR] - 9` 到 `[CURRENT_YEAR]`。
+     * 如果没有提及，则不设置年份字段。
+
+    * **影响因子(IF)限制**:
+     * "高影响因子": `min_if: 5.0`。
+     * "较高影响因子": `min_if: 3.0`。
+     * "顶级期刊": `min_if: 10.0`。
+     * 如果用户指定具体数值或范围（如“5到10分”），则精确设置 `min_if` 和 `max_if`。
+     * 如果未提及，则不包含 `min_if` 和 `max_if` 字段。
+
+    * **期刊分区限制 (重要规则)**:
+     * **严格匹配**: 仅当用户明确提及“**中科院分区**”或“**CAS分区**”时，才输出 `cas_zones` 字段。
+     * **严格匹配**: 仅当用户明确提及“**JCR分区**”、“**JCR quartile**”或“**Q1/Q2**”等时，才输出 `jcr_quartiles` 字段。
+     * **禁止推断**: 如果用户只说了“高影响因子”或“顶级期刊”，**绝不能**自动添加任何分区限制。只输出 `min_if`。
+
+    * **keywords字段**:
+     * 此字段应包含从用户输入中提取出的最核心、最关键的**人类可读的英文概念词**，而不是完整的检索式。它用于快速概览查询主题。
+
+    * **输出格式**:
+     * 严格以JSON格式输出。
+     * 对于用户未提及的限制条件（如IF、分区、年份），**不要在JSON中包含这些字段**，或者将其值设为`null`。
+
+    ---
+
+    **用户输入:**
+    `{user_input}`
+
+    ---
+
+    **示例分析**
+
+    * **示例用户输入1**: "我想找近5年关于司美格鲁肽治疗青少年肥胖症的临床试验，要求发表在JCR Q1区的高影响因子期刊上。"
+    * **预期输出1**:
+     ```json
+     {{
+     "query": "((\"Obesity\"[MeSH Terms] OR \"obesity\"[tiab]) AND (\"Adolescent\"[MeSH Terms] OR \"adolescent\"[tiab] OR \"teenager\"[tiab])) AND (\"Semaglutide\"[MeSH Terms] OR \"semaglutide\"[tiab] OR \"Ozempic\"[tiab] OR \"Wegovy\"[tiab] OR \"Rybelsus\"[tiab]) AND (\"Clinical Trial\"[Publication Type] OR \"clinical trial\"[tiab])",
+     "year_start": 2020,
+     "year_end": 2024,
+     "min_if": 5.0,
+     "jcr_quartiles": ["Q1"],
+     "keywords": ["obesity", "adolescent", "semaglutide", "clinical trial"]
+     }}
+     ```
+     *(假设当前是2024年)*
+
+    * **示例用户输入2**: "肺癌的靶向治疗最新进展"
+    * **预期输出2**:
+     ```json
+     {{
+     "query": "((\"Lung Neoplasms\"[MeSH Terms] OR \"lung cancer\"[tiab] OR \"pulmonary cancer\"[tiab]) AND (\"Molecular Targeted Therapy\"[MeSH Terms] OR \"targeted therapy\"[tiab]))",
+     "year_start": 2022,
+     "year_end": 2024,
+     "keywords": ["lung cancer", "targeted therapy"]
+     }}
+     ```
+     *(“最新进展”通常被理解为“近年来”，即近3年)*
+
+    ---
 
     请对上述用户输入进行分析并输出JSON格式结果:
 
