--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+ai_config.yaml
+ai_model_cache.json
+.system_cache/environment_check.json
+cache/journal_mapping_cache.pkl
+#my
+/pubmed_cache
+/cache
+/文献检索结果
+/综述大纲
+/综述文章
+/tools
